feat: added placeholders and docs for new syrup api endpoint
