# internal/models/syrup/syrup_version.go
@@ -1,0 +1,6 @@
+package syrup
+
+type VersionInfo struct {
+	Version  string `json:"version" example:"1.0.0"`
+	Provider string `json:"provider" example:"DiscountDB"`
+}
